# Cheetah-Software

SPIne/.hg/: dirstate  hgrc  undo.desc
SPIne/.hg/cache/: branch2-base  tags2-visible
SPIne/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
SPIne/.hg/store/data/: leg__message.h.i  main.cpp.i  math__ops.cpp.i  math__ops.h.i  mbed-dev.lib.i  mbed.bld.i
actor_model/: actor_0.pt  actor_100.pt  actor_1000.pt  actor_1200.pt  actor_1700.pt  actor_19000.pt  actor_200.pt  actor_3600.pt  actor_4200.pt  actor_48000.pt  actor_600.pt  actor_800.pt  actor_900.pt  mean100.csv  mean1000.csv  mean1200.csv  mean1700.csv  mean19000.csv  mean200.csv  mean3600.csv  mean4200.csv  mean48000.csv  mean600.csv  mean800.csv  mean900.csv  var0.csv  var100.csv  var1000.csv  var1200.csv  var1700.csv  var19000.csv  var200.csv  var3600.csv  var4200.csv  var48000.csv  var600.csv  var800.csv  var900.csv
common/include/Dynamics/: MiniCheetah.h
common/include/SimUtilities/: SpineBoard.h
common/src/SimUtilities/: SpineBoard.cpp
config/: c3-jpos-user-parameters.yaml  initial_jpos_ctrl.yaml
robot/include/: JPosInitializerForStanding.h
robot/src/: JPosInitializerForStanding.cpp
user/JPos_Controller/: CMakeLists.txt  JPosUserParameters.h  JPos_Controller.cpp  JPos_Controller.hpp  main.cpp
user/MIT_Controller/: MIT_Controller.cpp
user/MIT_Controller/FSM_States/: ControlFSM.cpp
